test/consumeDepTypeVar.slq
def main(){
	a:=[0:ğ”¹,1:ğ”¹,0:ğ”¹];
	b:=[0:ğ”¹,1:ğ”¹,0:ğ”¹];
	a:=a coerce ğ”¹^b.length;
	x:=b; // error
}
